--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Magic Game/Assets/_Project/Scenes/WhiteBoxing.unity
+Magic Game/Assets/_Project/Scenes/WhiteBoxing.unity.meta
